--- a/admin/admin-style.css
+++ b/admin/admin-style.css
@@ -1,3 +1,6 @@
+body{
+  font-family:'Asap',helvetica,arial,sans-serif;
+}
 #content{
   color:#fff;
   padding: 20px;
@@ -15,6 +18,7 @@ label{
 label>span{
   display: block;
   margin-bottom: 5px;
+  font-size: 13px;
 }
 label b{
   color:red;
@@ -32,6 +36,7 @@ label b{
 .thumbnail{
   display: block;
   margin-bottom: 10px;
+  width: 100%;
 }
 h1{
   text-transform: capitalize;
@@ -115,4 +120,46 @@ input[type=text][name=name]{
 }
 .svg-cross:hover{
   fill: red;
+}
+fieldset {
+  border: 1px solid #333;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 1%;
+  padding: 10px;
+  float: left;
+}
+fieldset.left,fieldset.right{
+  width: 48%;
+}
+fieldset.right{
+  float: right;
+}
+.button-wrapper{
+  display: block;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+  background-color: #333;
+  border: 1px solid #595959;
+  border-radius: 3px;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 12px;
+  cursor: pointer;
+}
+.button-wrapper>input{
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
 }
