--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -1,3 +1,4 @@
+
 @media (max-width: 1300px) {
   #content{
     width: 70%;
@@ -32,6 +33,7 @@
     span{
       left: 0;
       bottom: 0px;
+      top:auto;
       transform: translateY(120%);
     }
   }
