--- a/scss/global.scss
+++ b/scss/global.scss
@@ -12,6 +12,7 @@ body{
   background-attachment: fixed;
   font-family:'Asap',helvetica,arial,sans-serif;
   -webkit-font-smoothing:antialiased;
+  color:#fff;
 }
 img{
   max-width:100%;
