--- a/scss/imports.scss
+++ b/scss/imports.scss
@@ -7,6 +7,7 @@
 // page sections
 @import "sections/header";
 @import "sections/sidebar";
+@import "sections/hero";
 @import "sections/content";
 @import "sections/right-sidebar";
 
