enabled admin edit for hero banners

--- a/scss/sections/hero.scss
+++ b/scss/sections/hero.scss
@@ -7,7 +7,7 @@
   }
   .hero-text{
     width: 100%;
-    // text-align: center;
+    border-left: 10px solid #FFABFF;
     background-color: rgba(255,255,255,.2);
     padding:20px;
   }
