--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -13,6 +13,9 @@
 }
 
 @media (max-width: 900px) {
+  .hero-text{
+    font-size: .8em;
+  }
   #content.article{
     width: 80%;
   }
@@ -83,14 +86,18 @@
   }
 }
 @media (max-width: 500px) {
+  .hero-text{
+    font-size: .7em;
+  }
   #sidebar{
     width: 100%;
     max-width: none;
   }
   #logo-link {
     display: block;
-    width: 80px;
-    margin: 5px auto 0;
+    float: left;
+    width: 60px;
+    margin: 10px 0 10px 10px;
   }
   #menu-button{
     display: block;
@@ -99,10 +106,26 @@
     cursor: pointer;
     border-bottom: 1px solid #222;
     background-color: rgba(255, 255, 255, 0.12);
+    width: 150px;
+    float: right;
+    margin: 10px 0 0 0;
   }
   #links a, #menu-button{
     height: 44px;
     padding-top: 14px;
+  }
+  #links{
+    border-top: 1px solid #666;
+  }
+  #links a{
+    display: block;
+    width: 50%;
+    border-color:#666;
+    border-top:0;
+    padding-left: 20px;
+    &:nth-child(odd){
+      border-right: 1px solid #666;
+    }
   }
   #menu-content{
     display: none;
@@ -114,22 +137,27 @@
     width: 100%;
   }
   #content{
-    margin-top: 15px;
+    margin-top: 0px;
     width: 100%;
     padding: 0;
   }
+  
   .column{
-    width: 100%;
+    width: 50%;
+    float: left;
 
-    &:first-child .bar-link{
-      padding: 0;
+    .bar-link{
+      padding: 0 15px!important;
       margin: 0;
     }
-  }
+    .inner-column{
+      padding:0px 15px!important;
+    }
 
-  // only show the first three blocks in any column. (homepage)
-  .content-block:nth-child(n+4){
-    display: none;
+    &:nth-of-type(2){
+      float: right;
+    }
+
   }
 
   // single artist, event, or project pages
