made text headers at top of categories

--- a/scss/layouts/columns.scss
+++ b/scss/layouts/columns.scss
@@ -3,6 +3,9 @@
   width: 33.33%;
   .bar-link{
     padding: 0 15px 0 15px;
+    h2{
+      margin-top: 0;
+    }
   }
   .inner-column{
     padding:0px 15px 0 15px;
