--- a/scss/sections/hero.scss
+++ b/scss/sections/hero.scss
@@ -1,6 +1,7 @@
 #hero{
   width: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+  overflow: auto;
   
   img{
     width: 100%;
@@ -11,8 +12,7 @@
     background-color: rgba(255,255,255,.2);
     padding:20px;
   }
-  h1{
-    
+  h1{    
     font-size: 1.4em;
     margin:0 0 20px 0;
   }
