--- a/scss/layouts/columns.scss
+++ b/scss/layouts/columns.scss
@@ -1,33 +1,18 @@
 .column{
   float: left;
   width: 33.33%;
-  .bar-link{
-    padding: 0 15px 0 15px;
-    h2{
-      margin-top: 0;
-    }
-  }
-  .inner-column{
-    padding:0px 15px 0 15px;
+  padding: 0 15px;
+  .bar-link {
+    margin-bottom: 30px;
   }
 }
 
 .column:first-of-type{
- .bar-link{
-    padding: 0 15px 0 0;
-  }
-  .inner-column{
-    padding:0px 15px 0 0;
-  }  
+  padding-left: 0;
 }
 
 .column:last-of-type{
- .bar-link{
-    padding: 0 0 0 15px;
-  }
-  .inner-column{
-    padding:0px 0 0 15px;
-  }  
+  padding-right: 0;  
 }
 
 
