tagline under logo

--- a/scss/sections/sidebar.scss
+++ b/scss/sections/sidebar.scss
@@ -3,6 +3,13 @@
   width: 30%;
   max-width: 250px;
   padding-right: 40px;
+  h1 {
+    font-size: 14px;
+    font-weight: normal;
+    padding: 0 0 0 10px;
+    line-height: 1.4em;
+    color: #ddd;
+  }
 }
 #menu-button{
   color:#fff;
