--- a/scss/sections/hero.scss
+++ b/scss/sections/hero.scss
@@ -8,9 +8,8 @@
   }
   .hero-text{
     width: 100%;
-    border-left: 10px solid #FFABFF;
-    background-color: rgba(255,255,255,.2);
-    padding:20px;
+    padding-top: 20px;
+    text-align: center;
   }
   h1{    
     font-size: 1.4em;
