--- a/scss/sections/hero.scss
+++ b/scss/sections/hero.scss
@@ -10,6 +10,9 @@
     width: 100%;
     padding-top: 20px;
     text-align: center;
+    p{
+      margin: 0;
+    }
   }
   h1{    
     font-size: 1.4em;
