--- a/admin/admin-style.css
+++ b/admin/admin-style.css
@@ -46,6 +46,76 @@ input[type=text][name=name]{
   font-size: 16px;
 }
 
+#dashboard #sidebar #links{
+  display: none;
+}
+
+#sidebar #links>div{
+  margin-bottom: 20px;
+  float: left;
+  width: 100%;
+}
+#sidebar #links>div>span{
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
+  background-color: rgba(149, 243, 245, 0.19);
+  padding: 5px 10px;
+}
+
+#sidebar>a{ /* log out link, floating alone */
+  float: left;
+  width: 100%;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 13px;
+  border-bottom: 1px solid #111;
+  border-top: 1px solid #222;
+  transition: background-color .2s;
+}
+
+#sidebar>a:hover{
+  background-color: rgba(64,64,64,.79);
+}
+
+.dashboard-links #links{
+  display: flex;
+  flex-wrap:wrap;
+}
+
+.dashboard-links #links>div{
+  flex-grow:1;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  float: left;
+  background-color: rgba(149, 243, 245, 0.19);
+  
+}
+.dashboard-links #links>div span{
+  font-weight: bold;
+  font-size: 18px;
+  padding-bottom: 10px;
+  display: block;
+  border-bottom: 1px solid;
+}
+
+.dashboard-links #links>div a{
+  float: none;
+  display: block;
+  border:0;
+  color:#fff;
+  width: 100%;
+}
+
+.dashboard-links #links>div a:hover{
+  background-color: #fff;
+  color:#000;
+  font-weight: bold;
+  
+}
 
 /* surrounding tag container */
 .tag-editor {
