--- a/admin/admin-style.css
+++ b/admin/admin-style.css
@@ -87,6 +87,7 @@ input[type=text][name=name]{
 
 .dashboard-links #links>div{
   flex-grow:1;
+  flex-basis: 40%;
   margin: 10px;
   padding: 10px;
   text-align: center;
