--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -10,6 +10,9 @@
     width: 20%;
     padding-right: 0;
   }
+  #content{
+    width: 75%;
+  }
 }
 
 @media (max-width: 900px) {
@@ -63,6 +66,18 @@
     margin-left: 0;
     padding-left: 20px;
   }
+  #projects.column{
+    .inner-column{
+      height: auto;
+    }
+    .content-block{
+      width: 100%;
+      margin-bottom: 30px;
+      &:nth-child(n+7){
+        display: none;
+      }
+    }
+  }
 }
 @media (max-width: 750px) {
   .tiles>a{
@@ -75,7 +90,7 @@
   #sidebar h1{
     display: none;
   }
-  .column{
+  .column, #events.column, #projects.column{
     width: 50%;
     float: left;
 
