--- a/scss/layouts/columns.scss
+++ b/scss/layouts/columns.scss
@@ -63,7 +63,8 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 100vh;
+    height: 150vh;
+    max-height: 1400px;
     overflow: hidden;
   } 
   .content-block{
