--- a/src/scss/layouts/tiles.scss
+++ b/src/scss/layouts/tiles.scss
@@ -61,7 +61,7 @@
   background-color: $pink;
 }
 
-.tiles>a.sponsors-tile {
+.tiles>a.sponsors-tile, .tiles>a.partners-tile {
   background-repeat: no-repeat;
   background-color: #fff!important;
   background-position: 50%!important;
