add shop url, shop icon and create a new page for the shop via admin panel
add style to shop nav item

--- a/src/scss/sections/sidebar.scss
+++ b/src/scss/sections/sidebar.scss
@@ -47,6 +47,16 @@
   opacity: 0;
 }
 
+#link-shop::after {
+	content: "new";
+	padding: 2px;
+	margin: 0 4px;
+	font-size: 10px;
+	background-color: #930092;
+	border-radius: 2px;
+	color: white;
+}
+
 // Social icons
 
 #social-sidebar {
