highlight workshops nav item when clicked

--- a/src/scss/sections/sidebar.scss
+++ b/src/scss/sections/sidebar.scss
@@ -32,6 +32,7 @@
   border-top: 1px solid #222;
   transition:background-color .2s;
 }
+.active-workshops>#link-workshops,
 .active-artists>#link-artists,
 .active-events>#link-events, 
 .active-projects>#link-projects{
